fix: add test for approve event